# web-research

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: index.md  resume.yaml  tasks.md  (+4 more)
tools/web-research/: pyproject.toml  run-server.sh
tools/web-research/.memories/: KNOWLEDGE.md  QUICK.md
tools/web-research/benchmarks/: auditor_ab.py
tools/web-research/docs/: auditor-iteration-control-ideas.md  capabilities.md
tools/web-research/scripts/: compare_cleaners.py  inspect_chunks.py  smoke_test.py
tools/web-research/tests/: conftest.py  test_cli_events.py  test_conductor.py  test_events.py
tools/web-research/tests/auditor/: test_auditor.py  test_model_checker.py  test_renderers.py  test_signals.py
tools/web-research/tests/extraction/: test_chunker.py  test_cleaners.py  test_merger.py  test_models.py  test_output.py
tools/web-research/tests/knowledge/: test_store.py
tools/web-research/tests/search/: test_filters.py
tools/web-research/web_research/: cli.py  conductor.py  events.py
tools/web-research/web_research/auditor/: auditor.py  model_checker.py  renderers.py  signals.py
tools/web-research/web_research/auditor/prompts/: sufficiency.md
tools/web-research/web_research/extraction/: chunker.py  cleaners.py  extractor.py  fetcher.py  firecrawl_fetcher.py  merger.py  output.py  prompts.py  protocols.py
tools/web-research/web_research/knowledge/: __init__.py  store.py
tools/web-research/web_research/mcp/: server.py
tools/web-research/web_research/search/: domain_blacklist.json  filters.py  firecrawl.py  protocols.py
(+71 files in other folders)
