[project]
name = "web-research"
version = "0.1.0"
description = "Local-model-powered web research workbench"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "trafilatura>=2.0",
    "html2text>=2024.2",
]

[tool.hatch.build.targets.wheel]
packages = ["spike"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
